--- a/ControlesEnsalamento/ControlesEnsalamento.csproj
+++ b/ControlesEnsalamento/ControlesEnsalamento.csproj
@@ -206,6 +206,7 @@
     <Compile Include="Controllers\SalasController.cs" />
     <Compile Include="Controllers\TipoSalasController.cs" />
     <Compile Include="Controllers\TurmasController.cs" />
+    <Compile Include="DAL\EventoDAO.cs" />
     <Compile Include="DTO\CursoDTO.cs" />
     <Compile Include="DTO\EnsalamentoDTO.cs" />
     <Compile Include="DTO\DisciplinaDTO.cs" />
@@ -220,6 +221,7 @@
     <Compile Include="Models\Cursos.cs" />
     <Compile Include="Models\Disciplina.cs" />
     <Compile Include="Models\Ensalamentos.cs" />
+    <Compile Include="Models\Evento.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Professor.cs" />
